# shade-core

./: .gitignore  README.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  task.md
.github/workflows/: pr-baseline.yml
docs/: README.md
docs/adr/: 0001-repository-bootstrap.md  README.md  adr-template.md
docs/architecture/: 01-system-context-and-boundaries.md  README.md  data-models.md  module-map.md  runtime-loop-a-to-o.md  shade-v1-control-stack.md  system-overview.md  worker-ontology.md
docs/governance/: README.md  branch-pr-rules.md  branch-protection.md  repo-policy.md
docs/onboarding/: README.md  local-setup.md
docs/qa/: README.md  docs-to-code-traceability.md  evaluation-matrix.md  test-strategy.md
docs/releases/: README.md  checkpoint-foundation-bundles.md  checkpoint-post-foundation-cycle-1.md  checkpoint-post-foundation-cycle-2.md  checkpoint-post-foundation-cycle-3.md  checkpoint-post-foundation-cycle-4.md  checkpoint-post-foundation-cycle-5.md  checkpoint-post-foundation-cycle-6.md  release-process.md
src/: README.md
src/shade_core/: __init__.py  bundle.py  contract_gate.py  evaluation.py  evaluation_gate.py  models.py  runtime_loop.py  serialization.py  state.py
tests/: README.md  test_bundle.py  test_contract_gate.py  test_evaluation.py  test_evaluation_gate.py  test_import.py  test_models.py  test_repo_consistency.py  test_runtime_loop.py  test_serialization.py  test_state.py
